k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquasafe-frontend
  labels:
    app: aquasafe-frontend
spec:
  selector:
    app: aquasafe-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
