k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aquasafe_frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: veynitha-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aquasafe_frontend
                port:
                  number: 80
